--- a/_examples/completeDemo.html
+++ b/_examples/completeDemo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
     <title>UMEDITOR 完整demo</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <link href="../themes/default/_css/umeditor.css" type="text/css" rel="stylesheet">
+    <link href="../themes/turquoise/stylesheets/turquoise.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="../umeditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="editor_api.js"></script>
@@ -114,7 +114,7 @@
 <h1>UMEDITOR 完整demo</h1>
 
 <!--style给定宽度可以影响编辑器的最终宽度-->
-<script type="text/plain" id="myEditor" style="width:1000px;height:240px;">
+<script type="text/plain" id="myEditor" style="width:1400px;margin-left:20px;height:240px;">
     <p>这里我可以写一些输入提示</p>
 </script>
 
