add Screen shot

--- a/_examples/completeDemo.html
+++ b/_examples/completeDemo.html
@@ -15,13 +15,20 @@
             font-family: "微软雅黑";
             font-weight: normal;
         }
+        main{
+            margin: 0 auto;
+            display: block;
+            width: 1000px;
+        }
     </style>
 </head>
 <body>
+<main>
+
 <h1>UMEDITOR 完整demo</h1>
 
 <!--style给定宽度可以影响编辑器的最终宽度-->
-<script type="text/plain" id="myEditor" style="width:1400px;height:240px;">
+<script type="text/plain" id="myEditor" style="width:800px;height:440px;">
     <p>这里我可以写一些输入提示</p>
 </script>
 
@@ -179,6 +186,6 @@
         }
     }
 </script>
-
+</main>
 </body>
 </html>
